@@ -43,6 +43,7 @@ export("+.section",
        bcdToInteger,
        byteToBinary,
        coastlineBest,
+       colorize,
        coordinate,
        coriolis,
        ctdAddColumn,
